# CVS-Arrow-Parser

./: .gitignore  CMakeLists.txt  README.md
autoresearch_csv/: experiment_csv.py  prepare_csv.py  program_csv.md  results.tsv
benchmarks/: bench.cu  sweep.cu
data/: sample.csv
include/: gpu_csv_parser.hpp  tuneable_params.h
scripts/: generate_csv.py
src/: gpu_csv_parser.cu  main.cpp
